# critical-materials-kb

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  railway.toml  render.yaml
data/: DATA_CATALOG.md
data/graph/: seed_data.json
eval/: golden_set.json
frontend/: app.py
frontend-react/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: ChatInput.jsx  ConfidenceBar.jsx  ExportButton.jsx  FollowUpQuestions.jsx  GraphVisualization.jsx  LoadingIndicator.jsx  MessageBubble.jsx  Sidebar.jsx  SourcesLibrary.jsx  WelcomeScreen.jsx
scripts/: ingest_documents.py  run_eval.py  seed_graph.py  test_query.py
src/: config.py
src/api/: main.py  models.py  rate_limit.py  source_urls.py
src/generation/: chains.py  generator.py  prompts.py  verifier.py
src/graph/: builder.py  neo4j_store.py  queries.py  schema.py
src/ingest/: chunker.py  embedder.py  entity_extractor.py  loader.py  pipeline.py
src/retrieval/: bm25_retriever.py  graph_retriever.py  hybrid_retriever.py  query_classifier.py  reranker.py  vector_retriever.py
src/store/: fulltext_store.py  metadata_store.py  query_cache.py  vector_store.py
supabase/migrations/: 001_initial_schema.sql  002_query_cache.sql
tests/: test_chains.py  test_chunker.py  test_embedder.py  test_eval_grader.py  test_fallback_generator.py  test_graph_retriever.py  test_hybrid_retriever.py  test_loader.py  test_query_cache.py  test_query_classifier.py  test_rate_limit.py  test_source_urls.py
(+5 files in other folders)
