[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critical-materials-kb"
version = "0.1.0"
description = "Hybrid RAG and GraphRAG knowledge base for U.S. critical materials supply chain data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Deepak Deo"},
]

dependencies = [
    # Document processing
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.7.0",

    # LLM and embeddings
    "openai>=1.30.0",
    "anthropic>=0.30.0",

    # LangChain
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",

    # Database
    "supabase>=2.0.0",
    "neo4j>=5.0.0",

    # Data models and config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Retrieval (cross-encoder reranker)
    "sentence-transformers>=2.7.0,<3.0.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Frontend
    "streamlit>=1.35.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
